--- a/css/raceListPredict.css
+++ b/css/raceListPredict.css
@@ -1693,18 +1693,17 @@ body .ticket__box__content__flex__items h3 {
 body .ticket__box__content__flex__items__number {
   display: flex;
   width: 544px;
-  height: 352px;
+  justify-content: center;
   line-height: 352px;
 }
 
 body .ticket__box__content__flex__items__number .number {
   width: 54px;
-  height: 54px;
   border: 1px solid #212121;
   text-align: center;
   line-height: 54px;
   font-size: 2.4rem;
-  margin: 148px 0 0 0;
+  margin: auto;
 }
 
 body .ticket__box__content__flex__items__number .name {
